add statical api;
